[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fleets and Ships/Ship.gd" type="Script" id=1]
[ext_resource path="res://Weapons/laser.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fleets and Ships/ships.png" type="Texture" id=3]
[ext_resource path="res://Weapons/Weapons.gd" type="Script" id=4]
[ext_resource path="res://effects/explosion1.png" type="Texture" id=5]
[ext_resource path="res://effects/explosion.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 34.8188, 35.9784 )

[sub_resource type="Animation" id=2]
resource_name = "explode"
length = 0.95
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("explosionSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.05, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 6 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("explosionSound:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="Ship" type="Area2D"]
scale = Vector2( 0.33, 0.33 )
script = ExtResource( 1 )
BulletScene = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -4.54546, -4.76837e-07 )
scale = Vector2( 0.683304, 0.713012 )
texture = ExtResource( 3 )
hframes = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3.69334, -0.615562 )
shape = SubResource( 1 )

[node name="FiringArc" type="Area2D" parent="."]
position = Vector2( 61.1097, 0 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="FiringArc"]
polygon = PoolVector2Array( -14.6054, -16.5883, 437.565, -274.673, 437.331, 270.258, -14.6511, 19.0276 )

[node name="Weapons" type="Node2D" parent="."]
script = ExtResource( 4 )
BulletScene = ExtResource( 2 )

[node name="ReloadTimer" type="Timer" parent="Weapons" groups=["InGameTimers"]]
wait_time = 0.33
one_shot = true

[node name="SwapMagazineTimer" type="Timer" parent="Weapons" groups=["InGameTimers"]]
wait_time = 2.0
one_shot = true

[node name="Muzzles" type="Node2D" parent="Weapons"]

[node name="Muzzle1" type="Position2D" parent="Weapons/Muzzles"]
position = Vector2( 21.6198, -12.4828 )

[node name="Muzzle2" type="Position2D" parent="Weapons/Muzzles"]
position = Vector2( 21.6198, 11.4533 )

[node name="Engines" type="Node2D" parent="."]

[node name="FuelLimitTimer" type="Timer" parent="Engines"]
wait_time = 30.0
one_shot = true
autostart = true

[node name="death" type="Node2D" parent="."]
visible = false

[node name="explosionSprite" type="Sprite" parent="death"]
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
hframes = 7

[node name="explosionSound" type="AudioStreamPlayer2D" parent="death"]
stream = ExtResource( 6 )
volume_db = -22.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="death"]
anims/explode = SubResource( 2 )

[node name="StatusLabel" type="Label" parent="."]
visible = false
margin_left = -96.9697
margin_top = -127.273
margin_right = -17.9697
margin_bottom = -112.273
rect_scale = Vector2( 2.51108, 3.57773 )
text = "Status Label"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="." to="." method="_on_Ship_body_entered"]
[connection signal="area_entered" from="FiringArc" to="." method="_on_FiringArc_area_entered"]
[connection signal="body_entered" from="FiringArc" to="." method="_on_FiringArc_body_entered"]
[connection signal="timeout" from="Weapons/ReloadTimer" to="Weapons" method="_on_ReloadTimer_timeout"]
[connection signal="timeout" from="Weapons/SwapMagazineTimer" to="." method="_on_SwapMagazineTimer_timeout"]
[connection signal="timeout" from="Weapons/SwapMagazineTimer" to="Weapons" method="_on_SwapMagazineTimer_timeout"]
[connection signal="timeout" from="Engines/FuelLimitTimer" to="." method="_on_FuelLimitTimer_timeout"]
